footer button now behave correctly on small viewport

--- a/css/style.css
+++ b/css/style.css
@@ -1509,7 +1509,7 @@ footer nav ul li a {
   text-decoration: none;
   color: #d7dee4; }
 footer .social {
-  width: 15.25424%;
+  width: 32.20339%;
   float: right;
   margin-right: 0;
   padding-top: 1em;
