--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,4 @@
-footer{ 
+footer{
 	@include container(12 center);
 	// @include card(1);
 	@include pad(1 of 12);
@@ -7,16 +7,16 @@ footer{
 	background-color: $footer-gray;
 	clear: both;
 	@include rob(0.85em, 100);
-	list-style:none; 
+	list-style:none;
 	ul{margin:0; padding: 0;}
 	nav{
 		@include span(6 wide first);
-		
+
 		@include pal(1.1em, 700);
 		height: 80px;
 		ul{ @include vertical-align;
 			li{
-				
+
 				display:inline-block;
 				padding:0 0.5em;
 				a{
@@ -27,7 +27,7 @@ footer{
 		}
 	}
 	.social{
-		@include span(2 last);
+		@include span(4 last);
 		// background-color:$two;
 		padding-top:1em;
 		height:53px;
@@ -36,7 +36,7 @@ footer{
 		li {border-radius:50%; border:2px solid $footer-gray-light;
 			width:40px; height: 40px; display:inline-block;
 			text-align:center;
-			
+
 			i{@include vertical-align; font-size: 1.3em;}
 			}
 		   }
@@ -47,7 +47,7 @@ footer{
 		text-align:right;
 		padding:0.8em 0;
 		border-top:1px solid $footer-gray-dark;
-		li{display:inline-block; list-style:none; 
+		li{display:inline-block; list-style:none;
 			color:$footer-gray-dark;
 			border-right:1px solid $footer-gray-dark;
 			padding:0 0.5em;
@@ -55,7 +55,7 @@ footer{
 			a{ color:$footer-gray-dark;
 				text-decoration:none;
 				&:hover {color:lighten($footer-gray, 25%);
-						
+
   					}
 				}
 			}
